Flashcards are saved upon creation and can be viewed with "next" and "previous"

--- a/PlaCard/Base.lproj/Main.storyboard
+++ b/PlaCard/Base.lproj/Main.storyboard
@@ -110,6 +110,28 @@
                                     <segue destination="nv3-NR-Occ" kind="presentation" identifier="EditSegue" id="jF2-Ni-hKD"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EHY-99-LVg">
+                                <rect key="frame" x="317" y="817" width="77" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Next">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="26"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTapOnNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xsg-OL-iX6"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g8K-Mr-AjE">
+                                <rect key="frame" x="20" y="799" width="91" height="85"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Prev">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="26"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTapOnPrev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BgK-xg-Fse"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -125,6 +147,8 @@
                         <outlet property="btnOptionThree" destination="U9a-DT-l6t" id="YdP-kf-fe3"/>
                         <outlet property="btnOptionTwo" destination="3F0-cs-Cb8" id="ocm-wz-0mC"/>
                         <outlet property="frontLabel" destination="nmn-f7-TkZ" id="xkw-37-0YS"/>
+                        <outlet property="nextButton" destination="EHY-99-LVg" id="dfm-fC-UhT"/>
+                        <outlet property="prevButton" destination="g8K-Mr-AjE" id="h0T-vm-TAf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
